# Project-Setup-Helper

./: README.md
C++/: README.md
C++/zmq_c++_python/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  msg.pb.cc  msg.proto  msg_pb2.py  pub  pub.cpp  sub.py
Data Extractor/: sands_of_time_data_creator.py
GUI/: README.md
GUI/samples/: SPLASH.ui  output.py
python/: PyOpenCL.md  dict_to_dot.py  profiling_decorator.py
python/Pytorch/: get_GPU_info.py
